tests/snapshots/cli_snapshots__transactions.snap
---
source: tests/cli_snapshots.rs
expression: output
---
Journal for "john"
================================================================================
2016-12-31 12:00 |                         Salary
                              good-inc ->            anna :   500    €          |

2017-04-22 00:00 |                        NO NOTE
    2017-02-17 00:00 |            anna ->       evil-corp :   300    €          |
    2017-03-05 00:00 |       evil-corp ->            anna :     1    evil_machine |

2017-12-24 00:00 |            Money for evil deal
                             john/giro ->       evil-corp :    15    €          |

2018-01-04 17:05 |                Christmas Gifts
                           john/wallet ->            anna :    33.95 €          |

2018-01-05 00:00 |
                              good-inc ->     john/wallet :   100    €          |

2018-01-07 00:00 |              Financial support
                                   ben ->       john/giro :   100    €          |

2018-01-07 00:00 |    Financial support in Dollar
                                   ben ->       john/giro :    50    $          |

2018-03-07 00:00 |   Financial support in Bitcoin
                                   ben ->       john/giro :     0.434114 BTC        |

2018-03-12 00:00 | More financial support in Bitcoin
                                   ben ->       john/giro :    60.318 BTC        |

2018-07-05 17:13 |                           Food
                                  anna ->    grocery-shop :    11.97 €          |

2018-12-30 14:00 |              End of year bonus
                              good-inc ->            anna :   220    €          |

2019-03-14 08:43 |                    Yummy bread
                                  anna ->          bakery :     7.29 €          |

2019-04-24 23:43 |                        Bicycle
                                  anna ->            john :   219.99 €          |

2020-01-06 12:17 |                          Pizza
                                  john ->          bakery :     7.8  €          |
