tests/snapshots/cli_snapshots__transfers.snap
---
source: tests/cli_snapshots.rs
expression: output
---
Journal for "john"
================================================================================
2016-12-31 12:00 |        good-inc ->            anna :   500    €          |
2017-02-17 00:00 |            anna ->       evil-corp :   300    €          |
2017-03-05 00:00 |       evil-corp ->            anna :     1    evil_machine |
2017-12-24 00:00 |       john:giro ->       evil-corp :    15    €          |
2018-01-04 17:05 |     john:wallet ->            anna :    33.95 €          |
2018-01-05 00:00 |        good-inc ->     john:wallet :   100    €          |
2018-01-07 00:00 |             ben ->       john:giro :   100    €          |
2018-01-07 00:00 |             ben ->       john:giro :    50    $          |
2018-03-07 00:00 |             ben ->       john:giro :     0.434114 BTC        |
2018-03-12 00:00 |             ben ->       john:giro :    60.318 BTC        |
2018-07-05 17:13 |            anna ->    grocery-shop :    11.97 €          |
2018-12-30 14:00 |        good-inc ->            anna :   220    €          |
2019-03-14 08:43 |            anna ->          bakery :     7.29 €          |
2019-04-24 23:43 |            anna ->            john :   219.99 €          |
2020-01-06 12:17 |            john ->          bakery :     7.8  €          |


